additional ambassadors title

--- a/app/views/organized/ambassador_dashboards/show.html.haml
+++ b/app/views/organized/ambassador_dashboards/show.html.haml
@@ -7,6 +7,8 @@
 %p
   On this page, we’ve listed effective activities for registering cyclists in Bike Index. You can track progress and get ideas from other Ambassadors in your area about successful strategies. If you have any questions, post them in our Slack channel or email #{link_to "lily@bikeindex.org", "mailto:lily@bikeindex.org"}.
 
+%h2{ style: "margin-top: 40px;" }
+  Suggested Activities
 %table.table.table-striped.table-bordered.ambassador-tasks-table{ style: "margin-top: 40px;" }
   %thead.small-header
     %tr
