--- a/app/views/admin/paid_features/edit.html.haml
+++ b/app/views/admin/paid_features/edit.html.haml
@@ -12,4 +12,4 @@
 
 %h3
   Invoices with this feature
-= render partial: "/admin/organizations/invoices/table", locals: { invoices: @invoices, sortable: false, display_organization: true }
+= render partial: "/admin/organizations/invoices/table", locals: { invoices: @invoices, render_sortable: false, display_organization: true }
