--- a/app/views/admin/memberships/show.html.haml
+++ b/app/views/admin/memberships/show.html.haml
@@ -19,5 +19,5 @@
       %th
         Organization Name
       %td
-        = @organization.name
+        = link_to @organization.name, admin_organization_path(@organization)
 = link_to 'Delete Membership!', admin_membership_path(@membership), method: :delete, confirm: 'Are you sure you want to delete this membership?', class: 'btn btn-danger'
