--- a/app/views/admin/users/edit.html.haml
+++ b/app/views/admin/users/edit.html.haml
@@ -49,24 +49,25 @@
       .form-group
         = f.label :username
         = f.text_field :username, class: "form-control"
-      .form-check.form-check-inline
-        = f.check_box :confirmed, disabled: @user.confirmed, class: "form-check-input"
-        = f.label :confirmed, class: "form-check-label"
-      .form-check.form-check-inline
-        = f.check_box :banned, class: "form-check-input"
-        = f.label :banned, class: "form-check-label"
-      %hr
-      .form-check.form-check-inline
-        = f.check_box :superuser, class: "form-check-input"
-        = f.label :superuser, class: "form-check-label"
-      - if current_user.developer?
+      .form-group
         .form-check.form-check-inline
-          = f.check_box :developer, class: "form-check-input"
-          = f.label :developer, class: "form-check-label"
-      %hr
-      .form-check.form-check-inline
-        = f.check_box :can_send_many_stolen_notifications, class: "form-check-input"
-        = f.label :can_send_many_stolen_notifications, class: "form-check-label"
+          = f.check_box :confirmed, disabled: @user.confirmed, class: "form-check-input"
+          = f.label :confirmed, class: "form-check-label"
+        .form-check.form-check-inline
+          = f.check_box :banned, class: "form-check-input"
+          = f.label :banned, class: "form-check-label"
+      .form-group
+        .form-check.form-check-inline
+          = f.check_box :superuser, class: "form-check-input"
+          = f.label :superuser, class: "form-check-label"
+        - if current_user.developer?
+          .form-check.form-check-inline
+            = f.check_box :developer, class: "form-check-input"
+            = f.label :developer, class: "form-check-label"
+      .form-group
+        .form-check.form-check-inline
+          = f.check_box :can_send_many_stolen_notifications, class: "form-check-input"
+          = f.label :can_send_many_stolen_notifications, class: "form-check-label"
     .col-md-6
       .form-group
         = f.label :secondary_emails
