fix broken specs

--- a/app/views/admin/users/_table.html.haml
+++ b/app/views/admin/users/_table.html.haml
@@ -1,3 +1,5 @@
+- render_sortable ||= false
+
 .full-screen-table
   %table.table.table-bordered.table-striped.table-sm
     %thead.thead-light.sortable
