--- a/app/views/admin/bikes/index.html.haml
+++ b/app/views/admin/bikes/index.html.haml
@@ -41,9 +41,8 @@
       /   = link_to "Ascend", admin_bikes_path(sortable_search_params.merge(search_lightspeed: nil, search_ascend: true)), class: "nav-link #{params[:search_ascend].present? ? 'active' : ''}"
       / %li.nav-item
       /   = link_to "Lightspeed", admin_bikes_path(sortable_search_params.merge(search_ascend: nil, search_lightspeed: true)), class: "nav-link #{params[:search_lightspeed].present? ? 'active' : ''}"
-      - unless @render_chart
-        %li.nav-item
-          = link_to "chart", admin_bikes_path(sortable_search_params.merge(render_chart: true)), class: "nav-link"
+      %li.nav-item
+        = link_to "chart", admin_bikes_path(sortable_search_params.merge(render_chart: !@render_chart)), class: "nav-link #{@render_chart ? 'active' : ''}"
   - if current_organization.present?
     %p.subtitle
       #{link_to current_organization.name, admin_organization_path(current_organization.to_param)} bikes
@@ -98,6 +97,6 @@
 - if params[:multi_delete]
   = render partial: "/admin/bikes/admin_bikes_table_multidelete"
 - else
-  = render partial: "/admin/bikes/admin_bikes_table", locals: { sortable: true }
+  = render partial: "/admin/bikes/admin_bikes_table", locals: { render_sortable: true }
 
 = paginate @bikes, views_prefix: "admin"
