--- a/app/views/admin/users/_table.html.haml
+++ b/app/views/admin/users/_table.html.haml
@@ -21,12 +21,10 @@
         Bikes
       %th
         Memberships
+      - if @search_ambassadors
+        %th Ambassador tasks
       %th
-        %small
-          Ambassador tasks
-
-      %th
-        Admin?
+        Roles
       %th
         %small
           Confirmed
@@ -64,13 +62,12 @@
                   - else
                     - first_org_rendered = true
                   = link_to membership.organization.name.gsub(" ", "\u00a0"), admin_users_path(organization_id: membership.organization_id), class: "small"
-            %td
-              - if user.ambassador?
-                - ambassador = Ambassador.find(user.id)
-                = ambassador.progress_count
+            - if @search_ambassadors
+              %td= user.progress_count
             %td
               %small
                 = "super" if user.superuser?
                 = "developer" if user.developer?
+                = "ambassador" if user.ambassador?
             %td.table-cell-check
               = "&#x2713;".html_safe if user.confirmed
